--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Leader Board</title>
+    <title>Web Starter Kit</title>
   </head>
   <body>
     <div id="container"></div>
